# llm-chess

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
game_logs/: test.pgn
game_logs/gpt_3p5_turbo_instruct_calibration/: 2025-06-07_13-34-38_game_00001.pgn  2025-06-07_13-35-19_game_00002.pgn  2025-06-07_13-36-10_game_00003.pgn  2025-06-07_13-37-09_game_00004.pgn  2025-06-07_13-37-43_game_00005.pgn  2025-06-07_13-38-44_game_00006.pgn  2025-06-07_13-40-10_game_00007.pgn  2025-06-07_13-41-34_game_00008.pgn  2025-06-07_13-42-34_game_00009.pgn  2025-06-07_13-47-00_game_00010.pgn  2025-06-07_13-48-14_game_00011.pgn  2025-06-07_13-49-03_game_00012.pgn  2025-06-07_13-49-36_game_00013.pgn  2025-06-07_13-50-13_game_00014.pgn  2025-06-07_13-51-12_game_00015.pgn  2025-06-07_13-52-29_game_00016.pgn  2025-06-07_13-53-20_game_00017.pgn  2025-06-07_13-54-42_game_00018.pgn  2025-06-07_13-55-48_game_00019.pgn  2025-06-07_13-56-41_game_00020.pgn  2025-06-07_13-57-40_game_00021.pgn  2025-06-07_13-58-21_game_00022.pgn  2025-06-07_13-58-49_game_00023.pgn  2025-06-07_13-59-52_game_00024.pgn  2025-06-07_14-01-28_game_00025.pgn  2025-06-07_14-02-44_game_00026.pgn  2025-06-07_14-04-46_game_00027.pgn  2025-06-07_14-06-08_game_00028.pgn  2025-06-07_14-07-08_game_00029.pgn  2025-06-07_14-08-04_game_00030.pgn  2025-06-07_14-08-39_game_00031.pgn  (+69 more)
llm_chess/: conftest.py
usage_examples/: GPT3p5TurboInstruct_ELO_calibration.ipynb  GPT3p5TurboInstruct_ELO_calibration_with_random_start.ipynb  GPT3p5TurboInstruct_vs_SotA_Reasoning_Models.ipynb  game_examples.ipynb  prompt_examples.ipynb
(+143 files in other folders)
